--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -29,6 +29,7 @@
     </nav>
     <div class="container">
       {% block content %}{% endblock %}
+      {% block extra %}{% endblock %}
     </div>
     <footer>
       <div class="container">
