--- a/app/creator/templates/list.html
+++ b/app/creator/templates/list.html
@@ -6,7 +6,7 @@
       <div class="col-md-9">
         <a href="/creator/add" class="btn btn-info">Add new table</a>
         <hr/>
-        <table id="table" class="display" width="100%" cellspacing="0">
+        <table id="table" class="table table-bordered" width="100%" cellspacing="0">
         <thead>
             <tr>
                 <th>Table Name</th>
@@ -26,3 +26,5 @@
       </div>
   </div>
 {% endblock %}
+
+{% block js %}{% endblock %}
