--- a/app/creator/templates/index.html
+++ b/app/creator/templates/index.html
@@ -2,18 +2,102 @@
 {% import "bootstrap/wtf.html" as wtf %}
 
 {% block content %}
-<h1>Create Table</h1>
-<br>
-      {{ wtf.quick_form(form)}}
-      {% with messages = get_flashed_messages() %}
-          {% if messages %}
-            <div class="alert alert-error">
-              <button type="button" class="close" data-dismiss="alert">×</button>
-               {% for message in messages %}
-                  <p class="error bg-danger"><strong>{{message}}</strong></p>
-               {% endfor %}
+<div class="row form">
+      <div class="col-md-9">
+        <h1>Create Table</h1>
+        <br>
+              {{ wtf.quick_form(form, extra_classes="form-table" )}}  
+    </div>
+</div>
+<div class="row detail">
+      <div class="col-md-9">
+        <ul class="nav nav-tabs" role="tablist">
+            <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">Home</a></li>
+        </ul>
+        <div class="tab-content">
+            <div role="tabpanel" class="tab-pane active" id="home">
+                <button class="btn btn-info add-attr" data-toggle="modal" data-target="#modalAttr">
+                    Add attribute
+                </button>
+                <hr/>
+                <table id="table" class="table table-bordered" width="100%" cellspacing="0">
+                <thead>
+                    <tr>
+                        <th>Attribute Name</th>
+                        <th>Display</th>
+                        <th>Type</th>
+                        <th>Primary Key</th>
+                        <th>Required</th>
+                        <th>Action</th>
+                    </tr>
+                </thead>
+                <tbody>
+                </tbody>
+                </table>
             </div>
-          {% endif %}
-      {% endwith %}
+        </div>
+      </div>
+</div>
+{% endblock %}
 
+{% block js %}
+    <script src="{{ url_for('static', filename='js/jquery-1.11.3.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
+    <script>
+         $(".form-table").submit(function(e){
+            e.preventDefault();
+            $.post("{{url}}",$(this).serializeArray()).done(function(data){
+               window.location = "/creator";
+            }).error(function() { alert('Internal Server Error'); });
+         });
+
+         $("#save_ch").on("click", function(e){
+            e.preventDefault();
+            var $rowCount = $('#table tr').length;
+            var $form = $(".form-attr");
+            var $array = $form.serializeArray();
+            $tr = $("<tr>");
+            $array.forEach(function(value, index, ar){
+            if (value.name !== "csrf_token")
+              $tr.append($("<td>").attr("id", $rowCount).
+              addClass(value.name).html(value.value.replace(/<[^>]+>/ig,'')));
+            });
+            var $a = $("<button>").attr("data-id", "attr_"+$rowCount)
+                 .addClass("btn btn-info").html("Delete")
+                 .on("click", function(e){
+                   e.preventDefault();
+                   var $input = "#"+ $(this).attr("data-id");
+                   $($input).remove();
+                   $(this).parent().remove();
+                 });
+            $tr.append($a);
+            $("#table tbody").append($tr);
+            $("<input>").attr("type", "hidden")
+            .attr("id", "attr_"+$rowCount)
+            .attr("name", "attr_"+$rowCount)
+            .val($form.serialize()).appendTo(".form-table");
+            $("#modalAttr").modal("hide");
+         });
+
+    </script>
+{% endblock %}
+
+{% block extra %}
+<div class="modal fade" id="modalAttr" tabindex="-1" role="dialog">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title">Modal title</h4>
+      </div>
+      <div class="modal-body">
+        {{ wtf.quick_form(detail_form, extra_classes="form-attr")}}
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" id="save_ch" class="btn btn-primary">Save changes</button>
+      </div>
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
 {% endblock %}
