--- a/app/creator/templates/list.html
+++ b/app/creator/templates/list.html
@@ -17,7 +17,17 @@
             {% for table in tables%}
             <tr>
                 <td>{{ table.id }}</td>
-                <td><a class="btn btn-info" href="edit/{{ table.id }}">Edit</a></td>
+                <td>
+                  <div class="btn-group">
+                      <button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      Action <span class="caret"></span>
+                      </button>
+                      <ul class="dropdown-menu">
+                        <li><a href="edit/{{ table.id }}">View</a></li>
+                        <li><a data-table="{{ table.id }}" data-toggle="modal" data-target="#modalTable">Delete</a></li>
+                      </ul>
+                  </div>
+                </td>
             </tr>
             {% endfor %}
         </tbody>
@@ -27,4 +37,49 @@
   </div>
 {% endblock %}
 
-{% block js %}{% endblock %}
+{% block js %}
+    <script src="{{ url_for('static', filename='js/jquery-1.11.3.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
+    <script>
+      $('#modalTable').on('show.bs.modal', function (event) {
+        var button = $(event.relatedTarget);
+        var table = button.attr('data-table');
+        var modal = $(this);
+        modal.find('p').text('Are you sure you want to delete table "'+table+'" ?');
+        modal.find('#delete').attr('data-table', table);
+      });
+
+      $('#delete').on('click',function(e){
+        e.preventDefault();
+        $.post('delete/'+$(this).attr('data-table')).done(function(data){
+          if (data!=='0'){
+              window.location = '/creator';
+          }
+          else{
+            alert("The table can't be deleted");
+          }
+        }).error(function() { alert('Internal Server Error'); });
+        $("#modalTable").modal("hide");
+      });
+    </script>
+{% endblock %}
+
+{% block extra %}
+<div class="modal fade" id="modalTable" tabindex="-1" role="dialog">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title">Delete Table</h4>
+      </div>
+      <div class="modal-body">
+        <p class="msg"></p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">No</button>
+        <button type="button" id="delete" class="btn btn-primary">Yes</button>
+      </div>
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
+{% endblock %}
